--- a/index.html
+++ b/index.html
@@ -1,34 +1,133 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Chris Tong</title>
-        <link href="styles/style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Hey, I'm Chris</h1>
-        <img src="images/dope.jpg" alt="My test image">
-        <p>I'm a  software engineer with a B.S. in Computer Science from North Carolina State University.</p>
-        <p>Some of my skills include:</p>
-        <ul>
-            <li>Java</li>
-            <li>C/C++</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>C#</li>
-            <li>Visual Basic</li>
-            <li>Git/GitHub</li>
-            <li>Experience with Linux/Unix Systems</li>
-            <li>Software Development Processes</li>
-            <li>Networking</li>
-            <li>Artificial Intelligence</li>
-            <li>CyberSecurity</li>
-            <li>Microsoft Office</li>
-        </ul>
+<html lang="en-US">
 
-        <p>Check out my <a href="https://www.linkedin.com/in/christopher-tong-863899161">LinkedIn</a> page !</p>
-        <script src="scripts/main.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="Chris Tong">
+    <meta name="description" content="Chris Tong is a software engineer with a B.S. in Computer Science 
+        from North Carolina State University.">
+
+    <!-- Need to change the image later. OpenGraph metadata for Facebook.  -->
+    <meta property="og:image" content="images/dope.jpg">
+    <meta property="og:description" content="Chris Tong is a software engineer with a B.S. in Computer 
+        Science from North Carolina State University.">
+
+    <!-- Twitter Cards metadata. -->
+    <meta name="twitter:title" content="Chris Tong: Software Engineer">
+
+    <!-- Icon. Needs to be updated. -->
+    <link rel="shortcut icon" href="docs/icon.ico" type="image/x-icon">
+
+    <title>Chris Tong: Software Engineer</title>
+    <link href="styles/style.css" rel="stylesheet">
+    <script src="my-js-file.js" defer></script>
+    <script src="https://kit.fontawesome.com/c9bcd50925.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <nav>
+        <h1 class="navbar">Chris Tong - Software Engineer</h1>
+        <!-- Displays inverted. Need to fix that. -->
+        <div>
+            <a href="#home">Home</a>
+            <a href="#about">About Me</a>
+            <a href="#experience">Experience</a>
+            <a href="docs/resume.pdf" target="_blank">Resume</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact Me</a>
+        </div>
+    </nav>
+
+    <main>
+        <article id="home">
+            <img class="profile" src="docs/chris.jpg" alt="Chris Tong: Software Engineer">
+            <h2>Chris Tong</h2>
+            <h3>Undergraduate Computer Science Student</h2>
+            <h3>North Carolina State University</h2>
+
+            <section class="connect">
+                <ul>
+                    <!-- Has buttons for email, github, and linkedin. Can add more later. -->
+                    <li><a href="mailto:catong51@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/christopher-tong-863899161"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/ctong751"><i class="fab fa-github-square"></i></a></li>
+                </ul>
+            </section>
+
+            <section id="about">
+                <h1>About Me</h1>
+                <p>Blah blah blah. FIX ME</p>
+            </section>
+
+            <section id="skills">
+                <h1>Skills</h1>
+                <ul>
+                    <li>Java</li>
+                    <li>C/C++</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>C#</li>
+                    <li>Visual Basic</li>
+                    <li>Git/GitHub</li>
+                    <li>Experience with Linux/Unix Systems</li>
+                    <li>Software Development Processes</li>
+                    <li>Networking</li>
+                    <li>Artificial Intelligence</li>
+                    <li>CyberSecurity</li>
+                    <li>Microsoft Office</li>
+                </ul>
+            </section>
+        </article>
+
+        <article id="experience">
+            <!-- TODO: Implement -->
+            <h1>Experience</h1>
+            <section id="courses">
+                <h2>Relevant Courses</h2>
+            </section>
+
+            <section id="workexperience">
+                <h2>Work Experience</h2>
+                <div>
+                    <h3>Coding Instructor</h3>
+                    <p>Code Ninjas</p>
+                    <p>Feb 2017 - Aug 2021 &middot Concord, NC</p>
+                    <ul class="job-description">
+                        <!-- TODO: Fill in the rest. -->
+                    </ul>
+                </div>
+
+                <!-- TODO: Add the rest in separate divs. -->
+            </section>
+        </article>
+
+        <article id="projects">
+            <!-- TODO: Implement -->
+            <h1>Projects</h1>
+            <div>
+                <a class="project-name" href="">Visual Sorting Algorithm</a>
+                <p>TODO: Add brief discription along with screenshot of project.</p>
+
+                
+            </div>
+        </article>
+
+        <article id="contact">
+            <h1>Contact Me</h1>
+            <!-- TODO: Implement -->
+            <!-- Use a form to send myself an email. -->
+            <form>
+
+            </form>
+            <!-- Show my calendar to show when I'm busy/schedule meeting, etc. -->
+        </article>
+    </main>
+
+    <footer>
+        <a href="index.html"><h2>Back to Top</h2></a>
+    </footer>
+</body>
+
 </html>
