--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <nav>
-        <h1 class="navbar">Chris Tong - Software Engineer</h1>
+        <h1 class="navbar">Chris Tong - Software Engineer - SITE IN PROGRESS</h1>
         <!-- Displays inverted. Need to fix that. -->
         <div>
             <a href="#home">Home</a>
