--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
 <body>
     <nav>
-        <h1 class="navbar">Chris Tong - Software Engineer - SITE IN PROGRESS</h1>
+        <h1 class="navbar-title">Chris Tong - Software Engineer</h1>
         <!-- Displays inverted. Need to fix that. -->
-        <div>
-            <a href="#home">Home</a>
-            <a href="#about">About Me</a>
+        <div class="navbar-items">
+            <a href="index.html">Home</a>
             <a href="#experience">Experience</a>
             <a href="docs/resume.pdf" target="_blank">Resume</a>
             <a href="#projects">Projects</a>
@@ -41,78 +40,106 @@
     </nav>
 
     <main>
-        <article id="home">
-            <img class="profile" src="docs/chris.jpg" alt="Chris Tong: Software Engineer">
-            <h2>Chris Tong</h2>
-            <h3>Undergraduate Computer Science Student</h2>
-            <h3>North Carolina State University</h2>
+        <div class="flex-container" id="home">
+            <div class="flex-child-profile">
+                <div class="profile">
+                    <img class="profile-image" src="docs/chris.jpg" alt="Chris Tong: Software Engineer">
+                    <h2 class="profile-name">Chris Tong</h2> 
+                    <h3 class="profile-title">Undergraduate Computer Science Student</h2>
+                    <a class="profile-organization" href="https://www.csc.ncsu.edu/">North Carolina State University</a>
+                    <div class="profile-quick-links">
+                        <!-- Has buttons for email, github, and linkedin. Can add more later. -->
+                        <a href="mailto:catong51@gmail.com"><i class="fas fa-envelope"></i></a>
+                        <a href="https://www.linkedin.com/in/christopher-tong-863899161"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/ctong751"><i class="fab fa-github-square"></i></a>
+                    </div>
+                </div>
+            </div>
 
-            <section class="connect">
-                <ul>
-                    <!-- Has buttons for email, github, and linkedin. Can add more later. -->
-                    <li><a href="mailto:catong51@gmail.com"><i class="fas fa-envelope"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/christopher-tong-863899161"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/ctong751"><i class="fab fa-github-square"></i></a></li>
-                </ul>
-            </section>
+            <div class="flex-child-about">
+                <div class="about">
+                    <h1>About Me</h1>
+                    <p>Blah blah blah. FIX ME</p>
+                </div>
+            </div>
+        </div>
 
-            <section id="about">
-                <h1>About Me</h1>
-                <p>Blah blah blah. FIX ME</p>
-            </section>
+        <div class="skills-container" id="skills">
+            <h1>Skills</h1>
+            <div class="skills-flex-container">
+                <div class="flex-child-s1">
+                    <ul class="skills">
+                        <li>Java</li>
+                        <li>JavaScript</li>
+                        <li>Git/GitHub</li>
+                        <li>Networking</li>
+                    </ul>
+                </div>
+                <div class="flex-child-s2">
+                    <ul class="skills">
+                        <li>C/C++</li>
+                        <li>C#</li>
+                        <li>Artificial Intelligence</li>
+                        <li>Experience with Linux/Unix Systems</li>
+                    </ul>
+                </div>
+                <div class="flex-child-s3">
+                    <ul class="skills">
+                        <li>Python</li>
+                        <li>Visual Basic</li>
+                        <li>CyberSecurity</li>
+                        <li>Software Development Processes</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
-            <section id="skills">
-                <h1>Skills</h1>
-                <ul>
-                    <li>Java</li>
-                    <li>C/C++</li>
-                    <li>JavaScript</li>
-                    <li>Python</li>
-                    <li>C#</li>
-                    <li>Visual Basic</li>
-                    <li>Git/GitHub</li>
-                    <li>Experience with Linux/Unix Systems</li>
-                    <li>Software Development Processes</li>
-                    <li>Networking</li>
-                    <li>Artificial Intelligence</li>
-                    <li>CyberSecurity</li>
-                    <li>Microsoft Office</li>
-                </ul>
-            </section>
-        </article>
-
-        <article id="experience">
+        <div class="experience-container" id="experience">
             <!-- TODO: Implement -->
             <h1>Experience</h1>
+            <div class="work-experience-container">
+                <div class="row-experience">
+                    <div class="experience-marker">
+                        <div class="line-above">
+                            <div class="col">&nbsp;</div>
+                        </div>
+                        <div class="experience-marker-symbol">
+
+                        </div>
+                        <div class="line-below">
+
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-title">Coding Instructor</p>
+                                <p class="card-employer">Code Ninjas</p>
+                                <p class="card-dates-location">Feb 2017 - Aug 2021 &middot Concord, NC</p>
+                                <ul class="job-description">
+                                    <!-- TODO: Fill in the rest. -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
             <section id="courses">
                 <h2>Relevant Courses</h2>
             </section>
-
-            <section id="workexperience">
-                <h2>Work Experience</h2>
-                <div>
-                    <h3>Coding Instructor</h3>
-                    <p>Code Ninjas</p>
-                    <p>Feb 2017 - Aug 2021 &middot Concord, NC</p>
-                    <ul class="job-description">
-                        <!-- TODO: Fill in the rest. -->
-                    </ul>
-                </div>
-
-                <!-- TODO: Add the rest in separate divs. -->
-            </section>
         </article>
 
-        <article id="projects">
+        <div class="projects-container" id="projects">
             <!-- TODO: Implement -->
             <h1>Projects</h1>
             <div>
-                <a class="project-name" href="">Visual Sorting Algorithm</a>
+                <a class="project-name" href="https://ctong751.github.io/visual-sorting-algorithms">Visual Sorting Algorithm</a>
                 <p>TODO: Add brief discription along with screenshot of project.</p>
 
-                
+
             </div>
-        </article>
+        </div>
 
         <article id="contact">
             <h1>Contact Me</h1>
@@ -126,8 +153,9 @@
     </main>
 
     <footer>
-        <a href="index.html"><h2>Back to Top</h2></a>
+        <a href="index.html">
+            <h2>Back to Top</h2>
+        </a>
     </footer>
 </body>
-
 </html>
