--- a/tong/index.html
+++ b/tong/index.html
@@ -3,12 +3,17 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <title>Chris Tong &middot; Software Engineer</title>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c9bcd50925.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
@@ -19,57 +24,121 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="#">Experience</a>
-                    <a class="nav-link" href="#">Resume</a>
-                    <a class="nav-link" href="#">Projects</a>
-                    <a class="nav-link" href="#">Contact Me</a>
+                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link" href="#experience">Experience</a>
+                    <a class="nav-link" href="docs/resume.pdf">Resume</a>
+                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link" href="#contact">Contact Me</a>
                 </div>
             </div>
+        </div>
     </nav>
 
-    <div class="container-fluid bg-light" id="home">
-        <h1>Home</h1>
-        <div class="container bg-primary">
-            <div class="row justify-content-lg-center bg-primary">
-                <div class="col-4">
-                    <div class="container">
-                        <img class="card-img rounded-circle" src="docs/chris.jpg" alt="Chris Tong: Software Engineer">
+    <div class="container home" id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-4 profile">
+                    <div id="profile">
+                        <img class="card-img rounded-circle profile-image" src="docs/chris.jpg" alt="Chris Tong: Software Engineer">
                         <h2>Chris Tong</h2> 
                         <p class="profile-title">Undergraduate Computer Science Student</p>
                         <a class="profile-organization" href="https://www.csc.ncsu.edu/">North Carolina State University</a>
                         <div class="profile-quick-links">
                             <!-- Has buttons for email, github, and linkedin. Can add more later. -->
-                            <a href="mailto:catong51@gmail.com"><i class="fas fa-envelope"></i></a>
-                            <a href="https://www.linkedin.com/in/christopher-tong-863899161"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/ctong751"><i class="fab fa-github-square"></i></a>
+                            <a href="mailto:catong51@gmail.com"><i class="fas fa-envelope icon"></i></a>
+                            <a href="https://www.linkedin.com/in/christopher-tong-863899161"><i class="fab fa-linkedin icon"></i></a>
+                            <a href="https://github.com/ctong751"><i class="fab fa-github-square icon"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-8">
-                    <div class="container">
-                        <h1>About Me</h1>
-                        <p>I am... blah blah blah</p>
-                    </div>
+                <div class="col-12 col-lg-8 about">
+                    <h1>About Me</h1>
+                    <p>I am... blah blah blah</p>
                     
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid bg-light" id="skills">
+    <div class="container-fluid skills" id="skills">
         <h1>Skills</h1>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>Java</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>C/C++</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Python</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>JavaScript</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>C#</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Visual Basic</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>Git/GitHub</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Artificial Intelligence</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Cybersecurity</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>Networking</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Linux/Unix Systems</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Software Development Processes</h2>
+            </div>
+        </div>
     </div>
 
-    <div class="container-fluid bg-light" id="experience">
-        <h1>Experience</h1>
+    <div class="container-fluid work-experience" id="work-experience">
+        <h1>Work Experience</h1>
+        <div class="row experience">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Coding Instructor</h2>
+                        <a href="https://www.codeninjas.com/nc-concord" class="card-subtitle">Code Ninjas</a>
+                        <h3 class="card-subtitle">Feb 2017 - Aug 2021 &middot; Concord, NC</h3>
+                        <div class="card-text">
+                            <ul>
+                                <li>
+                                    <p>Taught coding and stuff lol :p</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="container-fluid bg-light" id="projects">
+    <div class="container-fluid relevant-courses" id="relevant-courses">
+        <h1>Relevant Courses</h1>
+    </div>
+
+    <div class="container-fluid projects" id="projects">
         <h1>Projects</h1>
     </div>
 
-    <div class="container-fluid bg-light" id="contact">
+    <div class="container-fluid contact" id="contact">
         <h1>Contact Me</h1>
     </div>
 
