Completed Projects and Relevant Courses sections.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" role="navigation">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Chris Tong &middot; Software Engineer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,18 +64,18 @@
         <h1>Skills</h1>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>Java</h2>
+                <h2>Java <i class="fab fa-java"></i></h2>
             </div>
             <div class="col-12 col-sm-4">
                 <h2>C/C++</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>Python</h2>
+                <h2>Python <i class="fab fa-python"></i></h2>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>JavaScript</h2>
+                <h2>JavaScript <i class="fab fa-js-square"></i></h2>
             </div>
             <div class="col-12 col-sm-4">
                 <h2>C#</h2>
@@ -86,24 +86,24 @@
         </div>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>Git/GitHub</h2>
+                <h2>Git/GitHub <i class="fab fa-github-square"></i></h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>Artificial Intelligence</h2>
+                <h2>Artificial Intelligence <i class="fas fa-brain"></i></h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>Cybersecurity</h2>
+                <h2>Cybersecurity <i class="fas fa-lock"></i></h2>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>Networking</h2>
+                <h2>Networking <i class="fas fa-network-wired"></i></h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>Linux/Unix Systems</h2>
+                <h2>Linux/Unix Systems <i class="fab fa-linux"></i></h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>Software Development Processes</h2>
+                <h2>Software Development Processes <i class="fas fa-code"></i></h2>
             </div>
         </div>
     </div>
@@ -132,10 +132,123 @@
 
     <div class="container-fluid relevant-courses" id="relevant-courses">
         <h1>Relevant Courses</h1>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>- Software Engineering</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- C and Software Tools</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Data Structures and Algorithms</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>- Automata, Grammars, and Computability</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Introduction to Computer Security</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Introduction to Artificial Intelligence</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>- Programming Concepts - Java</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Discrete Mathematics for Computer Scientists</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Ethics in Computing</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>- Concepts and Facilities of Operating Systems for Computer Scientists</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Data and Computer Communications Networks</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>- Computer Organization and Assembly Language for Computer Scientists</h2>
+            </div>
+        </div>
     </div>
 
     <div class="container-fluid projects" id="projects">
         <h1>Projects</h1>
+
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <p class="card-text">Something about my project...</p>
+                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <p class="card-text">Something about my project...</p>
+                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <p class="card-text">Something about my project...</p>
+                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <p class="card-text">Something about my project...</p>
+                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+
     </div>
 
     <div class="container-fluid contact" id="contact">
