Ironed out most details. Still need to add more experience and projects.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-link" href="#home">Home</a>
-                    <a class="nav-link" href="#experience">Experience</a>
+                    <a class="nav-link" href="#work-experience">Experience</a>
                     <a class="nav-link" href="docs/resume.pdf">Resume</a>
                     <a class="nav-link" href="#projects">Projects</a>
                     <a class="nav-link" href="#contact">Contact Me</a>
@@ -53,8 +53,17 @@
                 </div>
                 <div class="col-12 col-lg-8 about">
                     <h1>About Me</h1>
-                    <p>I am... blah blah blah</p>
-                    
+                    <p>
+                        I am currently a rising Senior at North Carolina State University majoring 
+                        in Computer Science, with a minor in Cognitive Science and track in Security.
+                        I will be graduating in May, 2022 with the hopes of pursuing a career in Cybersecurity, 
+                        or as a Software Engineer. 
+                        Some of my hobbies include hiking, watching sports, and hanging out with friends. 
+                        I am also a big Star Wars and Marvel fan and have a Golden Doodle named Finley. 
+                        Some of my interests in Computer Science are Cybersecurity, Artificial Intelligence, and Backend 
+                        Development. I am currently looking for an Internship or Full Time positions beginning in the Summer 
+                        of 2022 and would love to talk if you have any questions for me or would like to talk about my experience.
+                    </p>
                 </div>
             </div>
         </div>
@@ -119,9 +128,10 @@
                         <h3 class="card-subtitle">Feb 2017 - Aug 2021 &middot; Concord, NC</h3>
                         <div class="card-text">
                             <ul>
-                                <li>
-                                    <p>Taught coding and stuff lol :p</p>
-                                </li>
+                                <li>Taught Scratch, JavaScript, and C# to children age 7-14.</li>
+                                <li>Orchestrated camps on JavaScript and Cyber-Security.</li>
+                                <li>Created a Capture the Flag website used at the 2018 and 2019 InfraGard
+                                    CyberCamps held at Microsoft Charlotte Campus.</li>
                             </ul>
                         </div>
                     </div>
@@ -134,46 +144,46 @@
         <h1>Relevant Courses</h1>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>- Software Engineering</h2>
+                <h2>Software Engineering</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>- C and Software Tools</h2>
+                <h2>C and Software Tools</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>- Data Structures and Algorithms</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-sm-4">
-                <h2>- Automata, Grammars, and Computability</h2>
-            </div>
-            <div class="col-12 col-sm-4">
-                <h2>- Introduction to Computer Security</h2>
-            </div>
-            <div class="col-12 col-sm-4">
-                <h2>- Introduction to Artificial Intelligence</h2>
+                <h2>Data Structures and Algorithms</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>- Programming Concepts - Java</h2>
+                <h2>Automata, Grammars, and Computability</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>- Discrete Mathematics for Computer Scientists</h2>
+                <h2>Introduction to Computer Security</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>- Ethics in Computing</h2>
+                <h2>Introduction to Artificial Intelligence</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-4">
-                <h2>- Concepts and Facilities of Operating Systems for Computer Scientists</h2>
+                <h2>Programming Concepts - Java</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>- Data and Computer Communications Networks</h2>
+                <h2>Discrete Mathematics for Computer Scientists</h2>
             </div>
             <div class="col-12 col-sm-4">
-                <h2>- Computer Organization and Assembly Language for Computer Scientists</h2>
+                <h2>Ethics in Computing</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <h2>Concepts and Facilities of Operating Systems for Computer Scientists</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Data and Computer Communications Networks</h2>
+            </div>
+            <div class="col-12 col-sm-4">
+                <h2>Computer Organization and Assembly Language for Computer Scientists</h2>
             </div>
         </div>
     </div>
@@ -191,7 +201,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Visual Sorting Algorithms</h5>
-                                <p class="card-text">Something about my project...</p>
+                                <p class="card-text">In this project, I used four different sorting algorithms to sort bars by height, and included animations to visualize how the algorithms work.</p>
                                 <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
                             </div>
                         </div>
@@ -202,13 +212,13 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                            <img src="" class="img-fluid rounded-start" alt="">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <h5 class="card-title">TODO</h5>
                                 <p class="card-text">Something about my project...</p>
-                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                                <a href="">Click here to see</a>
                             </div>
                         </div>
                     </div>
@@ -218,13 +228,13 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                            <img src="" class="img-fluid rounded-start" alt="">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <h5 class="card-title">TODO</h5>
                                 <p class="card-text">Something about my project...</p>
-                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                                <a href="">Click here to see</a>
                             </div>
                         </div>
                     </div>
@@ -234,13 +244,13 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="docs/visual-sorting-algorithm.png" class="img-fluid rounded-start" alt="Visual Sorting Algorithm Project">
+                            <img src="" class="img-fluid rounded-start" alt="">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Visual Sorting Algorithms</h5>
+                                <h5 class="card-title">TODO</h5>
                                 <p class="card-text">Something about my project...</p>
-                                <a href="https://ctong751.github.io/visual-sorting-algorithms">Click here to see</a>
+                                <a href="">Click here to see</a>
                             </div>
                         </div>
                     </div>
@@ -253,6 +263,47 @@
 
     <div class="container-fluid contact" id="contact">
         <h1>Contact Me</h1>
+        <div class="row">
+            <div class="col-12 col-lg-8">
+                <!-- Contact Me form with fields for Name, Email, and Message with a send button.-->
+                <form action="https://formspree.io/f/xrgragnz" method="POST">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="name" class="form-control" id="name" name="name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" name="_replyto">
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="4" name="message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="container contact-me">
+                    <div class="contact-info">
+                        <h2>catong51@gmail.com</h2>
+                        <h2>(980)297-3961</h2>
+                        <h2>Raleigh, North Carolina</h2>
+                    </div>
+                    <span></span>
+                    <div class="profile-quick-links">
+                        <!-- Has buttons for Facebook, Instagram, LinkedIn, etc. Can add more later. -->
+                        <a href="https://www.facebook.com/christopher.tong.90"><i class="fab fa-facebook-square icon"></i></a>
+                        <a href="https://www.instagram.com/ctong51/"><i class="fab fa-instagram-square icon"></i></a>
+                        <a href="https://www.linkedin.com/in/christopher-tong-863899161"><i class="fab fa-linkedin icon"></i></a>
+                        <a href="https://github.com/ctong751"><i class="fab fa-github-square icon"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid footer" id="footer">
+        <p>Chris Tong &middot; Software Engineer</p>
     </div>
 
     <!-- Bootstrap Bundle with Popper -->
