Updated with more experience/projects.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         I will be graduating in May, 2022 with the hopes of pursuing a career in Cybersecurity, 
                         or as a Software Engineer. 
                         Some of my hobbies include hiking, watching sports, and hanging out with friends. 
-                        I am also a big Star Wars and Marvel fan and have a Golden Doodle named Finley. 
+                        I am also a big Star Wars and Marvel fan and have a Goldendoodle named Finley. 
                         Some of my interests in Computer Science are Cybersecurity, Artificial Intelligence, and Backend 
                         Development. I am currently looking for an Internship or Full Time positions beginning in the Summer 
-                        of 2022 and would love to talk if you have any questions for me or would like to talk about my experience.
+                        of 2022 and would love to talk if you have any questions for me about my experience.
                     </p>
                 </div>
             </div>
@@ -132,6 +132,23 @@
                                 <li>Orchestrated camps on JavaScript and Cyber-Security.</li>
                                 <li>Created a Capture the Flag website used at the 2018 and 2019 InfraGard
                                     CyberCamps held at Microsoft Charlotte Campus.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row experience">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">VEX Robotics Coach</h2>
+                        <a href="https://www.codeninjas.com/nc-concord" class="card-subtitle">Cabarrus County Schools</a>
+                        <h3 class="card-subtitle">Sep 2017 - Apr 2021 &middot; Concord, NC</h3>
+                        <div class="card-text">
+                            <ul>
+                                <li>Coached the first robotics team to exist at Odell Elementary School and taught the students how to build, drive, and program their robots</li>
+                                <li>Relayed information about upcoming events to parents and administration</li>
                             </ul>
                         </div>
                     </div>
@@ -208,57 +225,43 @@
                     </div>
                 </div>
             </div>
+
             <div class="col">
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="" class="img-fluid rounded-start" alt="">
+                            <img src="docs/iTrust2_2.jpeg" class="img-fluid rounded-start" alt="iTrust2 Project">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">TODO</h5>
-                                <p class="card-text">Something about my project...</p>
-                                <a href="">Click here to see</a>
+                                <h5 class="card-title">iTrust2 Team Project</h5>
+                                <p class="card-text">In this semester long team project, I worked in a team of 5 to implement new features in a full stack Java web application.</p>
+                                <a href="https://github.com/ncsu-csc326/iTrust2">Click here to learn more</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="col">
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="" class="img-fluid rounded-start" alt="">
+                            <img src="docs/KrownSelect.jpeg" class="img-fluid rounded-start" alt="Krown Select">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">TODO</h5>
-                                <p class="card-text">Something about my project...</p>
-                                <a href="">Click here to see</a>
+                                <h5 class="card-title">Krown Select Automation Tools and Website</h5>
+                                <p class="card-text">In this project that I am currently working on, I am implementing a full stack Java web application for a retail business.</p>
+                                <!-- <a href="">Click here to see</a> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="" class="img-fluid rounded-start" alt="">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">TODO</h5>
-                                <p class="card-text">Something about my project...</p>
-                                <a href="">Click here to see</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-          </div>
 
 
+        </div>
     </div>
 
     <div class="container-fluid contact" id="contact">
